/influx/api/v2/write test

--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "@opentelemetry/sdk-trace-node": "^0.25.0",
     "@opentelemetry/resources": "^0.25.0",
     "@opentelemetry/semantic-conventions": "^0.25.0",
-    "@opentelemetry/sdk-trace-base": "^0.25.0"
+    "@opentelemetry/sdk-trace-base": "^0.25.0",
+    "@influxdata/influxdb-client": "^1.31.0"
   },
   "devDependencies": {
     "casual": "^1.6.2",
