--- a/package.json
+++ b/package.json
@@ -14,6 +14,16 @@
   "dependencies": {
     "@apla/clickhouse": "^1.6.4",
     "@cloki/clickhouse-sql": "1.2.2",
+    "@influxdata/influxdb-client": "^1.31.0",
+    "@opentelemetry/api": "^1.0.2",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.33.0",
+    "@opentelemetry/instrumentation": "^0.25.0",
+    "@opentelemetry/instrumentation-connect": "^0.30.0",
+    "@opentelemetry/instrumentation-http": "^0.25.0",
+    "@opentelemetry/resources": "^0.25.0",
+    "@opentelemetry/sdk-trace-base": "^0.25.0",
+    "@opentelemetry/sdk-trace-node": "^0.25.0",
+    "@opentelemetry/semantic-conventions": "^0.25.0",
     "@qxip/plugnplay": "^3.3.1",
     "axios": "^0.21.4",
     "bnf": "^1.0.1",
@@ -27,10 +37,13 @@
     "glob": "^7.1.2",
     "handlebars": "^4.7.7",
     "handlebars-helpers": "^0.9.8",
+    "json-stable-stringify": "^1.0.1",
     "jsonic": "^0.3.1",
+    "node-fetch": "^2.6.7",
     "patch-package": "^6.4.7",
     "pino": "^7.6.5",
     "plugnplay": "npm:@qxip/plugnplay@^3.3.1",
+    "prometheus-remote-write": "^0.1.6",
     "protobufjs": "^6.11.2",
     "protocol-buffers": "^4.2.0",
     "protocol-buffers-encodings": "^1.1.1",
@@ -42,18 +55,7 @@
     "stream-json": "^1.7.3",
     "ws": "^8.4.0",
     "xxhash-wasm": "^0.4.2",
-    "yaml": "^1.10.2",
-    "json-stable-stringify": "^1.0.1",
-    "@opentelemetry/api": "^1.0.2",
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.33.0",
-    "@opentelemetry/instrumentation": "^0.25.0",
-    "@opentelemetry/instrumentation-connect": "^0.30.0",
-    "@opentelemetry/instrumentation-http": "^0.25.0",
-    "@opentelemetry/sdk-trace-node": "^0.25.0",
-    "@opentelemetry/resources": "^0.25.0",
-    "@opentelemetry/semantic-conventions": "^0.25.0",
-    "@opentelemetry/sdk-trace-base": "^0.25.0",
-    "@influxdata/influxdb-client": "^1.31.0"
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "casual": "^1.6.2",
