--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "stream-json": "^1.7.3",
     "ws": "^8.4.0",
     "xxhash-wasm": "^0.4.2",
-    "yaml": "^1.10.2"
+    "yaml": "^1.10.2",
+    "@elastic/elasticsearch": "^8.5.0"
   },
   "devDependencies": {
     "casual": "^1.6.2",
