--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "ws": "^8.4.0",
     "xxhash-wasm": "^0.4.2",
     "yaml": "^1.10.2",
-    "@elastic/elasticsearch": "^8.5.0",
+    "@elastic/elasticsearch": "=8.5.0",
     "markdown-table": "^3.0.3"
   },
   "devDependencies": {
