--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "xxhash-wasm": "^0.4.2",
     "yaml": "^1.10.2",
     "@elastic/elasticsearch": "=8.5.0",
-    "markdown-table": "^3.0.3"
+    "markdown-table": "^3.0.3",
+    "google-protobuf": "^3.21.4"
   },
   "devDependencies": {
     "casual": "^1.6.2",
